# dzlab-tools

./: .gitignore  Build.PL  Changes  MANIFEST  README  TAIR8_genes.gff  _build.pl  _build_current.pl  _build_pull.pl  _build_tags.pl  agp.pl  agp_confirm.pl  am_i_the_father_imprinting.pl  arma.pl  arma_batch.pl  arma_batch_2.pl  arma_build.pl  armageddon_analysis.pl  average_ends_combine.pl  average_ends_new.pl  bargainMethylation.pl  base_composition.pl  bastard_imprinting.pl  bench.pl  bowtie-count.pl  bowtie-extract-range.pl  bowtie-extract-snps.pl  bowtie-window.pl  bowtie2fastq.pl  bowtie2sam.pl  bowtie_count.pl  bowtie_window.pl  bs-bowtie  bs-bowtie-build  bs-find-tdna.pl  bs-mixed-c2t-g2a.pl  bs-seq-new.pl  bs-seq.pl  bs-sequel.pl  bs-tdna-has-insertion.pl  (+156 more)
System-Wrapper/: Build.PL  README
Tree-Range/: Build.PL  README  ignore.txt
cdzutils/: CMakeLists.txt  README.md
cdzutils/include/: countvec.h
cdzutils/lib/CDZUtils/: CountVec.pm
cdzutils/src/: cdzutils.c  countvec.c  test.c
cdzutils/t/: countvec.t
conf/: AT-ends-3-genes.conf  AT-ends-3-transposons.conf  AT-ends-5-genes.conf  AT-ends-5-transposons-flag2.conf  AT-ends-5-transposons.conf  AT-ends-both-genes-transposons.conf  AT-ends-both-genes.conf  AT-ends-both-transposons.conf  Bee-ends-both-genes.conf  Rice-ends-both-genes-transposons.conf  Rice-ends-both-transposons.conf  at-tair10-to-tair8.alignment  at-tair8-to-tair10.alignment  bastard.conf  bsseq.conf  check-symmetry.pl  convert_tair8_to_tair9.pl  divorce.conf  divorce_imprinting_tophat.yaml  ends-3-transposons.conf  ends-5-transposons.conf  (+12 more)
(+189 files in other folders)
